# lap-pii-screener

./: .gitignore  .pre-commit-config.yaml  .scannerignore  FAKER_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_FAKER_IMPLEMENTATION.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md  cli.py  pyproject.toml  requirements.txt  sensitive-scanner.yaml  server.py  sonar-project.properties
.github/agents/: sensitive-code-scanner.agent.md
.github/workflows/: sonar-ci.yml  sonar-pr.yml  sonar.yml
config/: regulations.yaml
docs/: HIGH-LEVEL-DESIGN.docx  HIGH-LEVEL-DESIGN.md  LOW-LEVEL-DESIGN.md  QUICKSTART.md  README.md  agent.md  ingestion-requirements-support.html  reports.md  scanners.md  setup.md
docs/design/: HIGH-LEVEL-DESIGN.md
docs/guides/: agent.md  obfuscation.md  scanning.md
docs/reference/: ingestion-requirements-support.html
docs/setup/: QUICKSTART.md  setup.md
models/: __init__.py  finding.py  report.py
obfuscation/: reviewer.py
remediation/: regulation_engine.py
reporting/: __init__.py  html_reporter.py  json_reporter.py
scanners/: __init__.py  binary_manager.py  constants.py  gitleaks_scanner.py  pii_scanner.py  semgrep_scanner.py  sonarqube_scanner.py
src/: cli.py  config_loader.py  server.py
src/config/: gitleaks.toml  suppress.txt
src/docker/: docker-compose.yml
src/obfuscation/: __init__.py  engine.py  faker_strategies.py  reviewer.py  session.py  strategies.py
src/remediation/: engine.py  rules.yaml
src/reporting/: console.py  constants.py  markdown_reporter.py
src/scanners/: base.py  binary_manager.py  gitleaks_scanner.py  orchestrator.py  pii_scanner.py  semgrep_scanner.py  sonarqube_manager.py  sonarqube_scanner.py
src/templates/: report.html.j2  report.md.j2
templates/: report.html.j2
tests/: conftest.py  test_binary_manager.py  test_cli.py  test_config_loader.py  test_faker_strategies.py  test_gitleaks_scanner.py  test_models.py  test_obfuscation.py  test_orchestrator.py  test_pii_scanner.py  test_regulation_engine.py  test_remediation.py  test_reporting.py  test_reviewer.py  test_scanners.py  test_semgrep_scanner.py  test_server.py  test_sonarqube_manager.py  test_sonarqube_scanner.py
tests/fixtures/test_target/: config.py
