[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensitive-code-scanner"
version = "0.1.0"
description = "Code-agnostic MCP agent to scan for PII, API keys, and secrets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ryan Corcoran" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]==1.23.3",
    "pydantic==2.13.4",
    "httpx==0.28.1",
    "rich==15.0.0",
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    "aiofiles==25.1.0",
    "typer==0.26.7",
]

[project.optional-dependencies]
spacy = ["spacy==3.8.13"]
semgrep = ["semgrep==1.167.0"]
docs = ["python-docx==1.2.0", "openpyxl==3.1.5", "striprtf==0.0.32", "olefile==0.47", "pdfminer.six==20260107", "extract-msg==0.55.0", "xlrd==2.0.2", "pyarrow==24.0.0", "fastavro==1.12.2"]
all = ["spacy==3.8.13", "semgrep==1.167.0", "python-docx==1.2.0", "openpyxl==3.1.5", "striprtf==0.0.32", "olefile==0.47", "pdfminer.six==20260107", "extract-msg==0.55.0", "xlrd==2.0.2", "pyarrow==24.0.0", "fastavro==1.12.2"]
dev = ["pytest==9.1.0", "pytest-cov==6.1.0", "pytest-asyncio==1.4.0", "pre-commit==4.2.0"]

[project.urls]
Repository = "https://github.com/DEFRA/lap-pii-screener"
Documentation = "https://github.com/DEFRA/lap-pii-screener/blob/main/docs/README.md"

[project.scripts]
sensitive-scanner = "cli:main"
sensitive-scanner-mcp = "server:main"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/scanners", "src/models", "src/remediation", "src/reporting", "src/obfuscation"]

[tool.hatch.build.targets.wheel.force-include]
"src/config" = "config"
"src/templates" = "templates"

[tool.uv]
exclude-newer = "2026-06-10T00:00:00Z"
# starlette 1.3.1 published 2026-06-12 — CVE fix for GHSA-82w8-qh3p-5jfq and GHSA-jp82-jpqv-5vv3
# pytest 9.1.0 published 2026-06-13 — CVE fix for GHSA-6w46-j5rx-g56g (CVE-2025-71176)
# semgrep 1.167.0 published 2026-06-17 — uses opentelemetry 1.37.x (protobuf 5.x+) and pyjwt 2.13.x
exclude-newer-package = { starlette = "2026-07-01T00:00:00Z", pytest = "2026-07-01T00:00:00Z", semgrep = "2026-07-01T00:00:00Z" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["E501", "S101", "S603", "S607", "S324", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["models", "scanners", "reporting", "remediation", "obfuscation"]
src-paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = []
# Write paths relative to the project root so SonarCloud can map coverage
# entries onto the indexed `sonar.sources=src` files (see SonarQube Cloud
# Python test coverage docs).
relative_files = true
[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

